--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@
                         display: block;
                         color: #000;
                         margin: 6px;
+                        padding-bottom:11px;
                     }
 
                     .news-box {
@@ -244,6 +245,7 @@
                         height: 250px;
                         width: 100%;
                         object-fit: cover;
+                        margin-bottom:5px;
                     }
 
                     body,
