--- a/index.html
+++ b/index.html
@@ -68,11 +68,10 @@
                     <b>Github Orgnizations & Links</b><br>
                     <a href="https://github.com/Haruharu-Television-Group">Haruharu Television Group</a><br>
                     <a href="https://github.com/UniPro-tech">UniProject</a><br>
-                    <a href="https://www.cja.pgw.jp">Copyrights of Japan Alliance(CJA)</a><br>
                 </div>
                 <div>
                     <b>Contact</b><br>
-                    E-mail : 01b.haruharu@mail.uniproject-tech.net<br>
+                    E-mail : 01b.haruharu@uniproject.jp<br>
                     <span style="margin-left:65px">harukogaku1@yahoo.co.jp</span><br>
                     Form : Prepairing.<br>
                     <br>
@@ -95,6 +94,7 @@
                         display: flex;
                         height: 55vh;
                         background: #fefefe;
+                        margin-top: 20px;
                     }
 
                     a-disc-l {
