よくなさそうなとこ修正

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
     <link rel="icon" href="sharu.ico">
     <link rel="apple-touch-icon" href="sharu.jpg">
-    <title>Haruharu Developper Site.(EN)</title>
+    <title>Haruharu Developer Site.(EN)</title>
 </head>
 
 <body>
@@ -276,8 +276,6 @@
 
                     body,
                     html {
-                        cursor: default;
-                        user-select: none;
                         margin: 0px;
                         padding: 0px;
                         width: 100%;
