--- a/llm.html
+++ b/llm.html
@@ -59,10 +59,10 @@
             </div>
             <div class="popup1" id="popup1">
                 <div class="popup1-content" id="popup1-content">
-                    <span class="close" id="popup1-close">&times;</span>
-                    <h3>設定</h3>
+                    <span class="close" id="popup1-close" style="float:right; color:#fff;">&times;</span>
+                    <h3 style="color: rgb(67, 75, 75);font-size: 16px;font-weight: 600;">設定</h3>
                     <ul>
-                        <li>表示デフォルト<select onchange="homepagellmmodechange()" id="hlmcs">
+                        <li>表示デフォルト<select onchange="homepagellmmodechange()" id="hlmcs" style="padding:10px 20px;border-radius: 8px;border: none;outline: none;font-size: 14px;cursor: pointer;background:rgba(173, 233, 255, 0.578);color:#fff;">
                                 <option value="nhome">Haruharu Homepage</option>
                                 <option value="hllm">Haruharu AI</option>
                             </select></li>
