--- a/llm.html
+++ b/llm.html
@@ -123,6 +123,8 @@
         height: 40px;
         line-height: 20px;
         flex-shrink: 0;
+        border: none;
+        background-color: rgb(158, 177, 177);
     }
 
     .user-input {
@@ -158,8 +160,8 @@
     .title-box {
         display: flex;
         align-items: center;
-        padding-top: 5%;
         position: relative;
+        padding: 20px 0;
     }
 
     .title-box-text {
@@ -170,6 +172,7 @@
         overflow: hidden;
         text-overflow: ellipsis;
         text-align: center;
+        top:30px;
     }
 
 
